tests/errors/compiler/wrong_first_printf_param/only_ident.c
void main() 
{
    char x[5];
    printf(x);
}
